--- a/assets/blog/css/style.css
+++ b/assets/blog/css/style.css
@@ -173,11 +173,31 @@ h1,h2,h3,h4,h5,h6 {
   font-weight:500;
 }
 
+body{
+  background-color:#434343;  /*消炭*/
+  color:#FFF;
+  color:#000;
+}
+
+.navigation a,
+a{
+  color:#A5DEE4 !important;  /*瓶覗*/
+}
+
+pre{
+  background-color:#1C1C1C;  /*墨*/
+  color:#fff;
+}
+
+
+
 .archive-pagination,
 .block-sidebar .widget,
 .border,
+article,
 .navigation{
-  background-color: #fff;
+  background-color: #70649A;
+  background-color: #787878;  /*铅*/
 }
 
 
@@ -189,7 +209,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .navigation .menus-main,.navigation .menus-right {
-  display: inline
+  display: inline;
 }
 
 .navigation a{
@@ -216,7 +236,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .archive-title,article {
-  background-color: #fff;
+  /*background-color: #fff;*/
   border-radius: 4px;
   border: 1px solid #E7E7E7;
   margin: 10px 10px 20px;
