--- a/assets/blog/css/style.css
+++ b/assets/blog/css/style.css
@@ -503,8 +503,37 @@ body.login .bg-bubbles li:nth-child(10){
 }
 /******login end******/
 
+/********post start********/
+body.post input,
+body.post select{
+  height:100%;
+  line-height: 100%;
+}
+
+body.post input,
+body.post .textarea,
+body.post select{
+  border:1px solid #E7E7E7;
+  border-radius: 4px;
+}
+
+body.post .textarea{
+  width:100%;
+  min-height:500px;
+  background:#787878;
+  color:#000;
+  outline:0;
+}
+
+body.post button{
+  width: 250px;
+  height:50px;
+  border-radius: 4px;
+}
 
 
+
+/********post end********/
 
 
 
