--- a/assets/blog/css/style.css
+++ b/assets/blog/css/style.css
@@ -250,6 +250,11 @@ article .markdown-body {
   margin-bottom: 15px;
 }
 
+article .markdown-body img{
+  max-width:100%;
+}
+
+
 .archive-pagination {
   border-radius: 4px;
   border: 1px solid #E7E7E7;
@@ -510,14 +515,16 @@ body.login .bg-bubbles li:nth-child(10){
   line-height: 100%;
 }
 
-.post input,
+.post input[type="text"],
 .post .textarea,
+.post textarea,
 .post select{
   border:1px solid #E7E7E7;
   border-radius: 4px;
 }
 
-.post .textarea{
+.post .textarea,
+.post textarea{
   width:100%;
   min-height:500px;
   background:#787878;
@@ -531,12 +538,39 @@ body.login .bg-bubbles li:nth-child(10){
   border-radius: 4px;
 }
 
+/*.post input[type="checkbox"]{
+  display:block;
+}*/
 
+
+
+.post .tags label{
+  position: relative;
+  float:left;
+  margin-left:10px;
+}
+
+
+.post .tags label>input[type="checkbox"]{
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top:50%;
+  margin-top:-8px;
+}
+
+.post .tags label>span{
+  padding-left:16px;
+}
+
+.post .tags>input[type="text"]{
+  width: 100%;
+}
 
 /********post end********/
 
 
-
+/******blog theme start*****/
 body{
   background-color:#434343;  /*消炭*/
   color:#000;
@@ -559,4 +593,13 @@ a{
 pre{
   background-color:#1C1C1C;  /*墨*/
   color:#fff;
+  padding:10px 15px;
+  border-radius: 5px;
+
 }
+
+code{
+  font-family:Consolas,"Courier New",Courier,FreeMono,monospace
+}
+
+/******blog theme end*****/
